# rpg_tools

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  assh_ability_adj.py  assh_char.py  assh_class_data.py  assh_spells.py  docker-compose.yml  gamma5_char.py  gamma5_data.py  main.py  maze_rats_char.py  maze_rats_data.py  maze_rats_magic.py  maze_rats_names.py  pyproject.toml  requirements.txt  requirements_all.txt  requirements_dev.txt  requirements_test.txt  rpg_tools_app.py  setup.py  td_char.py  td_data.py  utilities.py
game_systems/tiny_dungeon/: character.py  data.py
nginx/: nginx.conf
python/: Dockerfile  Makefile  app.py  assh_ability_adj.py  assh_char.py  dice.py  gamma5_char.py  gamma5_data.py  maze_rats_data.py  maze_rats_magic.py  maze_rats_names.py  requirements.txt
python/rpg_tools/assh/: char.py
python/rpg_tools/gamma5/: char.py  data.py
python/rpg_tools/tiny_dungeon/: char.py
python/test/: test_assh.sh  test_gamma5.sh  test_maze_rats.sh  test_tiny_dungeon.sh  test_utilities.py
rpg_tools/assh/: spells.py  spells_detailed.py
rpg_tools/d666/: char.py  data.py
rpg_tools/maze_rats/: char.py
rpg_tools/misc_data/: dcc_occupations.py  knave_spells.py  zothique_names.py
rpg_tools/tiny_dungeon/: char.py  data.py
test/: test_gamma5.py  test_utilities.py
